# RV32I_model

./: .gitignore  CMakeLists.txt  README.md  instruction.hpp  main.cpp  proc.hpp  processing.hpp  res6  run.sh  testing.sh
hello_test/: hello.elf  hello.s
include/: executing.hpp  instruction.hpp  memory.hpp  proc.hpp  processor.hpp  regfile.hpp  rv32i_model.hpp  tools.hpp
snippy_model/: CMakeLists.txt  layout_model.yaml
snippy_model/include/: RVM.h  VTable.h
snippy_model/layouts/: 001.yaml  002.yaml  003.yaml  004.yaml  all.yaml  run_layouts.sh
snippy_model/lib/: RVM.cpp  VTable.cpp
src/: main.cpp
tests/: 001_add.in  002_sub.in  003_addi.in  CMakeLists.txt  testing.sh  unit_test.cpp
tests/answers/: 001.out  002.out  003.out  004.out  005.out  006.out  007.out  009.out  010.out  011.out  012.out  013.out  014.out  015.out  016.out  017.out  019.out  020.out
tests/data/: 001.s  002.s  003.s  004.s  005.s  006.s  007.s  009.s  010.s  011.s  012.s  013.s  014.s  015.s  016.s  017.s  019.s  020.s  convert_s2bin.sh
